# marathon-cloud-cli

./: .dockerignore  .gitignore  .gitlab-ci.yml  .goreleaser.yaml  Cargo.toml  Cross.toml  Dockerfile  LICENSE  README.md  build.sh  config.go  go.mod  go.sum  main.go  rawAllure.go  requests.go  websocket.go
.github/: marathon-cloud.rb.liquid  marathon-cloud.sample.json
.github/workflows/: ci.yaml  docker.yaml  release.yaml  version-bump.yaml
allure/: rawAllure.go
config/: config.go
filter/: filter.go  filter_test.go
filter/testdata/: correctTypeNoFields.yaml  correctTypeTwoFields.yaml  filetype.yaml  fragmentation.yaml  invalidCompositionFields.yaml  unknownType.yaml
fixture/filtering/: filetype.yaml  filetype_with_comments.yaml  grammarError.yaml  invalid.yaml  missedAllowAndBlockLists.yaml  missedFilterConfiguration.yaml  tests.txt  valid.yaml  validComplex.yaml  wrongAllowList.yaml  wrongBlockList.yaml
fixture/filtering/xctestplan/: 1.json  test plan with spaces.xctestplan
fixture/patch_allure/: expected.json  original.json  original_no_attachments.json
request/: requests.go  websocket.go
src/: api.rs  artifacts.rs  cli.rs  errors.rs  filtering.rs  formatter.rs  hash.rs  interactor.rs  lib.rs  main.rs  progress.rs  pull.rs  result.rs
src/android/: mod.rs
src/bundle/: mod.rs
src/cli/: mod.rs  model.rs  validate.rs
src/cli/android/: mod.rs
src/cli/android/maestro/: mod.rs
src/cli/ios/: mod.rs
src/cli/ios/maestro/: mod.rs
src/cli/maestro/: mod.rs
src/compression/: mod.rs
src/filtering/: convert.rs  mod.rs  model.rs
src/filtering/xctestplan/: mod.rs
src/io/: mod.rs
src/ios/: mod.rs
