[package]
authors = ["Anton Malinskiy <am@marathonlabs.io>"]
categories = ["command-line-utilities"]
description = "Command-line client for Marathon Cloud"
homepage = "https://github.com/MarathonLabs/marathon-cloud-cli"
license = "MIT"
name = "marathon-cloud"
repository = "https://github.com/MarathonLabs/marathon-cloud-cli"
version = "1.0.0"
edition = "2021"
rust-version = "1.70"
default-run = "marathon-cloud"

[[bin]]
name = "marathon-cloud-mangen"
path = "src/bin/mangen.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive", "env"] }
clap_complete = "4"
log = "0.4.20"
serde = { version = "1.0", features = ["derive"] }
serde-enum-str = "0.4.0"
serde_json = "1.0.113"
serde_yaml = "0.9.31"
serde_with = "3.6.0"
simple_logger = "4.3.3"
tempfile = "3.9.0"
reqwest = { version = "0.11.23", features = ["json", "multipart", "stream"] }
time = { version = "0.3", features = ["serde-well-known"]}
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
futures = "0.3"
async-trait = "0.1"
num_cpus = "1"
clap-verbosity-flag = "2.1"
indicatif = "0.17"
console = "0.15"
thiserror = "1.0"
url = "2.5"
async-stream = "0.3"
clap_mangen = "0.2.18"
h2 = "0.3.24"

[dev-dependencies]
rstest = "0.18.2"
